--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #1D4221;
+    background-color: #ad0000;
     color: white;
     font-family: "Bai Jamjuree", sans-serif;
     display: flex;
@@ -10,8 +10,8 @@ body {
 }
 
 button {
-    background-color: #64A712;
-    color: white;
+    background-color: #ffd900;
+    color: rgb(0, 0, 0);
     font-family: "Bai Jamjuree", sans-serif;
 }
 
